--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -146,35 +146,45 @@ html {
     width: 45%;
     float: left;
     margin-right: 8px;
-    margin-top: 15px;
+    margin-top: 20px;
     border-radius: 5px;
     padding: 8px;
     border: 2px solid #e4e3e3;
     background-color: #ababaf;
   }
-  #user-profile{
-    float: left;
-    width: 40%;
-  }
   #user-feeds{
     float: left;
-    width: 45%;
+    width: 54%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    border-radius: 3px;
+    padding: 8px 16px;
+    border: 1px solid #ababaf;
   }
   .left-aside img{
     width: 100%;
     border-radius: 50%;
-    max-width: 100px;
+    max-width: 250px;
     height: auto;
   }
-  section .top-feeds{
-    float: left;
-    width: 49%;
-    margin-top: 15px;
+  .top-feeds{
+    clear: both;
+    width: 100%;
+    margin-top: 40px;
     padding: 6px;
     border-radius: 5px;
     border: 1px solid #e4e3e3;
   }
+  form  button{
+    line-height: 1em;
+    margin-top: 0;
+  }
+  .bg-color .form-row textarea{
+    margin-top: 3px;
+    padding: 4px;
+  }
  button{
+   margin-top: 0;
    padding: 4px;
    border-radius: 5px;
    background-color: #eff6fa;
