--- a/UI/css/form.css
+++ b/UI/css/form.css
@@ -40,3 +40,8 @@ input[type=submit]{
     width: 80%;
     margin: auto;
 }
+ @media only screen and (max-width:500px){
+    form{
+      width: 100%;
+    }
+  }
