--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -214,7 +214,7 @@ html {
    width: 100%;
  }
 
-  @media only screen and (max-width:700px){
+  @media only screen and (min-width:500px){
     .box{
       width: 50%;
     }
